2024-10-20 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation
2024-10-21 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.0.0.
2024-10-21 Fred Gleason <fredg@paravelsystems.com>
	* Added 'CmdSwitch' class in 'lib/cmdswitch.cpp' and 'lib/cmdswitch.h'.
2024-10-21 Fred Gleason <fredg@paravelsystems.com>
	* Fixed extraneous 'Sy' prefix in 'src/lib/profile.h'.
2024-10-21 Fred Gleason <fredg@paravelsystems.com>
	* Incremented package version to 1.0.1.
2024-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Refactored 'Profile'.
	* Added tests for 'Profile' using data from QStringList.
2024-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Removed dead code from 'Profile'.
2024-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Added 'Profile::<type>Values()' methods to permit retrieval of
	multiple uses of the same parameter in a given section.
2024-10-23 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'Profile' to return multiple uses of the same parameter
	in the same order as they are encountered in the configuration file.
2024-10-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'Profile' that caused parameters from diverse
	sections to be combined in the incorrect order.
2024-10-24 Fred Gleason <fredg@paravelsystems.com>
	* Added support for section IDs to 'Profile'.
2024-10-24 Fred Gleason <fredg@paravelsystems.com>
	* Renamed the 'Profile::setSource(const QString &,QString *err_msg)'
	method to 'Profile::loadFile(const QString &,QString *err_msg)'.
	* Added a 'Profile::loadDirectory()' method.