@@ -65,17 +65,9 @@ IpAddressValidValue=1.2.3.4
 IpAddressValidValue=5.6.7.8
 IpAddressValidValue=6.7.8.9
 IpAddressValidValue=7.8.9.10
-IpAddressInvalidValue=256.2.3.4
-IpAddressInvalidValue=256.256.3.4
-
-[Random]
-SomeRandomEntry=Foo
 
 [Tests]
 StringValue=to come to the aid
-
-[Random]
-SomeOtherRandomEntry=Bar
 
 [Tests]
 StringValue=of their country!
