@@ -16,5 +16,3 @@ TimeHHMMEveningValue=21:30
 TimeHHMMSSMorningValue=09:30:45
 TimeHHMMSSEveningValue=21:30:45
 IpAddressValidValue=1.2.3.4
-
-[Random]
