@@ -1,5 +1,3 @@
-[Random]
-
 [Tests]
 StringValue=for all good men
 IntegerValue=2345
@@ -18,4 +16,3 @@ TimeHHMMEveningValue=22:15
 TimeHHMMSSMorningValue=10:30:45
 TimeHHMMSSEveningValue=22:30:45
 IpAddressValidValue=5.6.7.8
-IpAddressInvalidValue=256.256.3.4
