@@ -16,5 +16,3 @@ TimeHHMMEveningValue=23:30
 TimeHHMMSSMorningValue=11:30:45
 TimeHHMMSSEveningValue=22:30:45
 IpAddressValidValue=6.7.8.9
-
-[Random]
