@@ -16,5 +16,3 @@ TimeHHMMEveningValue=23:45
 TimeHHMMSSMorningValue=11:45:45
 TimeHHMMSSEveningValue=23:30:45
 IpAddressValidValue=7.8.9.10
-
-[Random]
