@@ -28,3 +28,5 @@
 	* Renamed the 'Profile::setSource(const QString &,QString *err_msg)'
 	method to 'Profile::loadFile(const QString &,QString *err_msg)'.
 	* Added a 'Profile::loadDirectory()' method.
+2024-10-24 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'dump_profile' test command.
